Challenge #2 - Arrays Methods (.map, .filter, .reduce)

--- a/11-Arrays-Bankist/index.html
+++ b/11-Arrays-Bankist/index.html
@@ -125,6 +125,6 @@
 
     <script src="script.js"></script>
     <!-- <script src="lectures.js"></script> -->
-    <!-- <script src="challenge.js"></script> -->
+    <script src="challenge.js"></script>
   </body>
 </html>
