Added Login Functionality

--- a/11-Arrays-Bankist/index.html
+++ b/11-Arrays-Bankist/index.html
@@ -124,7 +124,7 @@
     </footer> -->
 
     <script src="script.js"></script>
-    <script src="lectures.js"></script>
-    <script src="challenge.js"></script>
+    <!-- <script src="lectures.js"></script> -->
+    <!-- <script src="challenge.js"></script> -->
   </body>
 </html>
